atualização dos parágrafos

--- a/index.html
+++ b/index.html
@@ -44,18 +44,31 @@
     
     <section>
         <h2>ERYKAH BADU</h2>
-        <p>Erykah Badu é uma cantora, compositora e atriz norte-americana nascida em 26 de fevereiro de 1971, em Dallas, Texas. Ela ficou conhecida nos anos 1990 como uma das vozes mais marcantes do neo soul, um estilo que mistura soul, jazz, R&B e hip-hop. Seu álbum de estreia, Baduizm (1997), trouxe sucessos como “On & On” e fez dela uma referência musical e espiritual, conquistando prêmios e elogios pela autenticidade e pela força de sua presença artística.
-        Com seu estilo único, turbantes, roupas marcantes e letras cheias de reflexão sobre identidade, amor e consciência social, Erykah Badu se tornou uma figura simbólica de liberdade e expressão criativa. Ao longo da carreira, lançou álbuns como Mama’s Gun (2000) e New Amerykah (2008), explorando temas políticos e espirituais com profundidade.
-        Mais do que uma cantora, ela é uma artista completa que usa a música como forma de cura e autoconhecimento. Até hoje, Erykah Badu é vista como uma das vozes mais autênticas e influentes da música negra contemporânea, inspirando gerações com sua arte e sua visão de mundo.
+        <p>
+            Erykah Badu é uma cantora, compositora e atriz norte-americana nascida em 26 de fevereiro de 1971, em Dallas, Texas. Ela ficou conhecida nos anos 1990 como uma das vozes mais marcantes do neo soul, um estilo que mistura soul, jazz, R&B e hip-hop. Seu álbum de estreia, Baduizm (1997), trouxe sucessos como “On & On” e fez dela uma referência musical e espiritual, conquistando prêmios e elogios pela autenticidade e pela força de sua presença artística.
+        </p>
+        <p>
+            Com seu estilo único, turbantes, roupas marcantes e letras cheias de reflexão sobre identidade, amor e consciência social, Erykah Badu se tornou uma figura simbólica de liberdade e expressão criativa. Ao longo da carreira, lançou álbuns como Mama’s Gun (2000) e New Amerykah (2008), explorando temas políticos e espirituais com profundidade.    
+        </p>
+        <p>
+            Mais do que uma cantora, ela é uma artista completa que usa a música como forma de cura e autoconhecimento. Até hoje, Erykah Badu é vista como uma das vozes mais autênticas e influentes da música negra contemporânea, inspirando gerações com sua arte e sua visão de mundo.
         </p>
     <img src="fotos/Badu (1).jpg"> <img src="fotos/Badu (2).jpg"> <img src="fotos/Badu (3).jpg">
 
     <h2>ALICIA KEYS</h2>
-        <p>Alicia Keys é uma cantora, pianista e compositora norte-americana nascida em Nova York, em 25 de janeiro de 1981. Desde pequena, ela mostrava talento pra música: começou a tocar piano aos sete anos e a compor canções na adolescência.
-        Ela estudou na famosa escola de artes Professional Performing Arts School e, com apenas 16 anos, terminou o ensino médio como uma das melhores alunas. Logo conseguiu um contrato com uma gravadora, mas só alcançou o sucesso de verdade em 2001, quando lançou seu primeiro álbum, Songs in A Minor. Esse disco foi um fenômeno, principalmente com a música Fallin’, que virou um clássico.
-        O sucesso veio acompanhado de reconhecimento: Alicia ganhou cinco prêmios Grammy logo no primeiro álbum. A partir daí, continuou lançando músicas que misturam R&B, soul e pop, sempre com letras fortes e emocionais — como If I Ain’t Got You, No One e Girl on Fire.
-        Além da música, ela também é ativista, defendendo causas como igualdade racial, empoderamento feminino e educação. Alicia é conhecida por valorizar a beleza natural e chegou a aparecer em eventos e capas de revistas sem maquiagem, como forma de incentivar a autoaceitação.
-        Hoje, ela é considerada uma das artistas mais talentosas e influentes de sua geração, com milhões de discos vendidos e uma carreira marcada por autenticidade e sensibilidade.
+        <p>
+            Alicia Keys é uma cantora, pianista e compositora norte-americana nascida em Nova York, em 25 de janeiro de 1981. Desde pequena, ela mostrava talento pra música: começou a tocar piano aos sete anos e a compor canções na adolescência.
+        </p>
+        <p>
+            Ela estudou na famosa escola de artes Professional Performing Arts School e, com apenas 16 anos, terminou o ensino médio como uma das melhores alunas. Logo conseguiu um contrato com uma gravadora, mas só alcançou o sucesso de verdade em 2001, quando lançou seu primeiro álbum, Songs in A Minor. Esse disco foi um fenômeno, principalmente com a música Fallin’, que virou um clássico.
+        </p>
+        <p>
+            O sucesso veio acompanhado de reconhecimento: Alicia ganhou cinco prêmios Grammy logo no primeiro álbum. A partir daí, continuou lançando músicas que misturam R&B, soul e pop, sempre com letras fortes e emocionais — como If I Ain’t Got You, No One e Girl on Fire.
+        </p>
+        <p>
+            Além da música, ela também é ativista, defendendo causas como igualdade racial, empoderamento feminino e educação. Alicia é conhecida por valorizar a beleza natural e chegou a aparecer em eventos e capas de revistas sem maquiagem, como forma de incentivar a autoaceitação.
+        <p>
+            Hoje, ela é considerada uma das artistas mais talentosas e influentes de sua geração, com milhões de discos vendidos e uma carreira marcada por autenticidade e sensibilidade.
         </p>
     <img src="fotos/AliciaKeys (1).jpg"><img src="fotos/AliciaKeys (2).jpg"><img src="fotos/AliciaKeys (3).jpg" alt="">
 
