--- a/index.html
+++ b/index.html
@@ -42,18 +42,22 @@
         }
 
         .imagens {
-            display: flex;
+            border-radius: 100px;
             border-style: solid;
-            justify-content: space-evenly;
-            flex-wrap: wrap;
-            padding: 1rem;
+            border-color: lightblue;
+            padding: 20px;
+            justify-content:space-evenly;
+            flex-wrap:wrap;
+            display: flex;
+            
         }
 
         .imagens > img {            
-            width: 25%;
-            min-width: 250px;
+            width: 200px;
+            height: 200px;
+            height: auto;
             border-radius: 20%;
-            margin: 30px;
+            margin: 20px;
             box-shadow: 0 3px 10px rgba(0, 0, 0, 1);            
         }
 
@@ -72,15 +76,31 @@
         <p>Mais do que uma cantora, ela é uma artista completa que usa a música como forma de cura e autoconhecimento. Até hoje, Erykah Badu é vista como uma das vozes mais autênticas e influentes da música negra contemporânea, inspirando gerações com sua arte e sua visão de mundo.</p>
 
         <div class="imagens">
-            <img src="fotos/Badu (1).jpg"> 
-            <img src="fotos/Badu (2).jpg"> 
-            <img src="fotos/Badu (3).jpg">
+            <img src="https://i.pinimg.com/1200x/fc/34/b0/fc34b0b3c65e89ea163627458cdea46f.jpg">
+            <img src="https://i.pinimg.com/736x/4c/dd/ae/4cddae37805850186d3f91e63fc8d6e2.jpg"> 
+            <img src="https://i.pinimg.com/736x/7d/b6/19/7db6197afbe21980eeac8c3caeef3569.jpg">
         </div>
 
         <p>Veja uma apresentação da artista: 
             <a href="https://www.youtube.com/watch?v=4cfmEgpOOZk">NPR: Erykah Badu</a>
         </p>
     </section>
+
+    <section>
+            <h2>SADE</h2>
+            <p>Folasade Adu, conhecida mundialmente como Sade, nasceu em 16 de janeiro de 1959, em Ibadan, na Nigéria, e foi criada na Inglaterra. Antes de se tornar cantora, estudou design de moda e chegou a trabalhar como modelo, mas sua paixão pela música a levou a integrar a banda Pride, onde começou a se destacar por sua voz suave e presença marcante. Com o tempo, formou seu próprio grupo, que levou seu nome — Sade — e se tornou uma das maiores referências do soul e do R&B contemporâneo.</p>
+            <p>1984, lançou o álbum de estreia “Diamond Life”, um sucesso internacional impulsionado por canções como “Smooth Operator” e “Your Love Is King”. A mistura de soul, jazz e pop sofisticado conquistou o público e a crítica, fazendo de Sade uma artista única, com uma sonoridade atemporal e elegante. Ao longo dos anos, ela lançou álbuns marcantes como “Promise” (1985), “Stronger Than Pride” (1988) e “Lovers Rock” (2000), todos com temas centrados em amor, solidão e autodescoberta.</p>
+            <p>Apesar do sucesso, Sade sempre manteve uma postura reservada e introspectiva, evitando o excesso de exposição midiática. Essa discrição se tornou parte de seu charme e de sua identidade artística, transmitindo a mesma serenidade presente em suas músicas. Sua carreira é um exemplo de longevidade e autenticidade: uma artista que fala de emoções profundas com delicadeza, e que, mesmo longe dos holofotes, continua sendo um símbolo de elegância e sensibilidade na música mundial.</p>
+
+            <div class="imagens">
+                <img src="https://i.pinimg.com/736x/64/d1/df/64d1df20404944afc54e76d8de85c404.jpg">
+                <img src="https://i.pinimg.com/736x/6f/df/62/6fdf623f94e4d5a321b4655892885459.jpg">
+                <img src="https://i.pinimg.com/736x/fd/2f/78/fd2f78356ec7fda193f6967979759ab5.jpg">
+            </div>
+            <p>Veja uma apresentação da artista: 
+                <a href="https://www.youtube.com/watch?v=U-SHfpm5Bxk">Is It A Crime (Live Video from San Diego)</a>
+            </p>
+    </section> 
 
     <section>
         <h2>ALICIA KEYS</h2>
@@ -91,29 +111,15 @@
         <p>Hoje, ela é considerada uma das artistas mais talentosas e influentes de sua geração, com milhões de discos vendidos e uma carreira marcada por autenticidade e sensibilidade.</p>
 
         <div class="imagens">
-            <img src="fotos/AliciaKeys (1).jpg">
-            <img src="fotos/AliciaKeys (2).jpg">
-            <img src="fotos/AliciaKeys (3).jpg">
+            <img src="https://i.pinimg.com/1200x/4e/4e/ba/4e4eba3d83d3b97cc09b390180eaab87.jpg">
+            <img src="https://i.pinimg.com/736x/4e/7b/1d/4e7b1da56ed1c553d88f767cd7929081.jpg">
+            <img src="https://i.pinimg.com/1200x/1c/50/94/1c509467f4ec4e7cf60168be9cfe7e56.jpg">
         </div>
         <p>Veja uma apresentação da artista: 
             <a href="https://www.youtube.com/watch?v=uwUt1fVLb3E">NPR: Alicia Keys</a>
         </p>
     </section>
 
-    <section>
-        <h2>SADE</h2>
-        <p>Folasade Adu, conhecida mundialmente como Sade, nasceu em 16 de janeiro de 1959, em Ibadan, na Nigéria, e foi criada na Inglaterra. Antes de se tornar cantora, estudou design de moda e chegou a trabalhar como modelo, mas sua paixão pela música a levou a integrar a banda Pride, onde começou a se destacar por sua voz suave e presença marcante. Com o tempo, formou seu próprio grupo, que levou seu nome — Sade — e se tornou uma das maiores referências do soul e do R&B contemporâneo.</p>
-        <p>1984, lançou o álbum de estreia “Diamond Life”, um sucesso internacional impulsionado por canções como “Smooth Operator” e “Your Love Is King”. A mistura de soul, jazz e pop sofisticado conquistou o público e a crítica, fazendo de Sade uma artista única, com uma sonoridade atemporal e elegante. Ao longo dos anos, ela lançou álbuns marcantes como “Promise” (1985), “Stronger Than Pride” (1988) e “Lovers Rock” (2000), todos com temas centrados em amor, solidão e autodescoberta.</p>
-        <p>Apesar do sucesso, Sade sempre manteve uma postura reservada e introspectiva, evitando o excesso de exposição midiática. Essa discrição se tornou parte de seu charme e de sua identidade artística, transmitindo a mesma serenidade presente em suas músicas. Sua carreira é um exemplo de longevidade e autenticidade: uma artista que fala de emoções profundas com delicadeza, e que, mesmo longe dos holofotes, continua sendo um símbolo de elegância e sensibilidade na música mundial.</p>
-
-        <div class="imagens">
-            <img src="https://i.pinimg.com/736x/64/d1/df/64d1df20404944afc54e76d8de85c404.jpg">
-            <img src="https://i.pinimg.com/736x/6f/df/62/6fdf623f94e4d5a321b4655892885459.jpg">
-            <img src="https://i.pinimg.com/736x/fd/2f/78/fd2f78356ec7fda193f6967979759ab5.jpg">
-        </div>
-        <p>Veja uma apresentação da artista: 
-            <a href="https://www.youtube.com/watch?v=U-SHfpm5Bxk">Is It A Crime (Live Video from San Diego)</a>
-        </p>
-    </section>   
+      
 </body>
 </html>
